force-app/main/default/objects/Migration_Info__c/Migration_Info__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Migration Info</label>
</CustomObject>