force-app/main/default/objects/Migration_Info__c/fields/Migrated_Field_1__c.field-meta.xml
<CustomField>
    <fullName>Migrated_Field_1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Migrated Field 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>