force-app/main/default/objects/Migration_Info__c/fields/Migrated_Field__c.field-meta.xml
<CustomField>
    <fullName>Migrated_Field__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Migrated Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>