force-app/main/default/objects/Migration_Info__c/fields/SOSL_KEY_FIELD__c.field-meta.xml
<CustomField>
    <fullName>SOSL_KEY_FIELD__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SOSL_KEY_FIELD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>