force-app/main/default/objects/Migration_Info__c/fields/SOSL_QUERY__c.field-meta.xml
<CustomField>
    <fullName>SOSL_QUERY__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SOSL_QUERY</label>
    <length>255</length>
    <type>Text</type>
</CustomField>