force-app/main/default/objects/Migration_Info__c/fields/SQL1__c.field-meta.xml
<CustomField>
    <fullName>SQL1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SQL1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>