force-app/main/default/objects/Migration_Info__c/fields/SQL2__c.field-meta.xml
<CustomField>
    <fullName>SQL2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SQL2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>