force-app/main/default/objects/Migration_Info__c/fields/SQL3__c.field-meta.xml
<CustomField>
    <fullName>SQL3__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SQL3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>