force-app/main/default/objects/Migration_Info__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Type</label>
    <length>15</length>
    <type>Text</type>
</CustomField>