force-app/main/default/objects/Migration_Info__c/fields/Validate_Field_Value_1__c.field-meta.xml
<CustomField>
    <fullName>Validate_Field_Value_1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Validate Field Value 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>